# hal9000

./: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.py
src/: arithmetic.rs  array.rs  lib.rs  main.rs  utils.rs
tests/: test_array.py
